Add tests for track2 SDK code

--- a/sdk/hybridconnectivity/Azure.ResourceManager.HybridConnectivity/tests/Azure.ResourceManager.HybridConnectivity.Tests.csproj
+++ b/sdk/hybridconnectivity/Azure.ResourceManager.HybridConnectivity/tests/Azure.ResourceManager.HybridConnectivity.Tests.csproj
@@ -1,5 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="$(RepoEngPath)/AzSdk.test.reference.targets" />
   <ItemGroup>
     <ProjectReference Include="..\src\Azure.ResourceManager.HybridConnectivity.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="SessionRecords\**\*.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
